@@ -1,3 +1,6 @@
+Version 2010081901 Wed Aug 18 17:59:26 CEST 2010
++ Added British authors
+
 Version 2010081701 Tue Aug 17 02:14:02 CEST 2010
 + Added SREZIC (Slaven Rezic)
 
